# pymyplot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pymyplot/: __init__.py  aip.py  basic.py  colors.py  elsevier.py  figsize.py  fonts.py  lines.py  markers.py  scaling.py
tests/: test_basic.py  test_color.py  test_presets.py
