[tool.poetry]
name = "pymyplot"
version = "0.2.1"
description = "Correction of usefull plotting setup for matplotlib"
authors = ["Kyoungseoun Chung <kchung@student.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
